--- a/wondergirls2/css/import.css
+++ b/wondergirls2/css/import.css
@@ -19,8 +19,6 @@ body {
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center 0;
-  width: 100%;
-  height: 100%;
 }
 header {
   height: 100px;
@@ -33,7 +31,6 @@ header h1 {
 }
 header h1 a {
   display: block;
-  border: 1px #f00 solid;
   padding: 25px;
   background-image: url("http://wondergirls.jype.com/images/logo-s.png");
   width: 104px;
@@ -65,23 +62,37 @@ header nav li {
   float: left;
   height: 100px;
   line-height: 100px;
+  font-weight: bold;
 }
 header nav li:hover {
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.5);
 }
 header nav li a {
-  ext-decoration: none;
-  padding: 0 18px;
+  text-decoration: none;
+  padding: 0 10px;
   display: block;
   color: #F28195;
   font-size: 16px;
-  font-weight: bold inherit;
+  font-family: 'Nanum Gothic';
   transition: .15s;
 }
 header nav li a:hover {
   color: #f4c22d;
   border-top: 3px #F28195 solid;
+}
+section .biglogo {
+  width: 320px;
+  height: 320px;
+  background-image: url("http://wondergirls.jype.com/images/mainlogo.png");
+  position: absolute;
+  top: 40%;
+  left: 60%;
+  transition: 1s;
+}
+section .biglogo:hover {
+  transform: scale(1.3);
+  opacity: 0;
 }
 footer {
   padding: 0 20px;
