--- a/wondergirls2/less/style.less
+++ b/wondergirls2/less/style.less
@@ -1,7 +1,9 @@
 *{margin: 0; padding: 0;}
 html,body{height:100%}
 ul{list-style:none;}
-a{text-decoration: none;}
+a{
+  text-decoration: none;
+}
 
 body{
   margin:0;
@@ -9,20 +11,22 @@ body{
   background-repeat: no-repeat;
   .bgsize(cover);
   background-position: center 0;
-  width: 100%;
-  height: 100%;
+  //width: 100%;
+  //height: 100%;
   }
+
   header{
     height: 100px;
     background-color:rgba(255,255,255,.53);
     box-shadow: 0 2px 10px #666;
     padding: 0 20px;
+
     h1{
       float:left;
       a{
         //float: right;
         display: block;
-        border: 1px #f00 solid;
+        //border: 1px #f00 solid;
         padding: 25px;
         background-image: url(@logo);
         width: 104px; height: 52px;
@@ -35,6 +39,7 @@ body{
         &:hover{transform: rotateY(180deg);}
       }
     }
+
     nav{
       float: right;
       .main_menu{
@@ -53,32 +58,39 @@ body{
         float: left;
         height: 100px;
         line-height: 100px;
+        font-weight: bold;
         &:hover{
           cursor: pointer;
           background-color: rgba(255,255,255,.5);
         }
         a{
-          ext-decoration: none;
-          padding: 0 18px;
+          text-decoration: none;
+          padding: 0 10px;
           display: block;
           color: @text-color;
           font-size: 16px;
-          font-weight: bold inherit;
+          font-family: 'Nanum Gothic';
+          //font-weight: bold inherit;
           transition: .15s;
           &:hover{color: @base-color; border-top: 3px @text-color solid;}
         }
       }
     }
   }
+
+
+
   section{
     //position: relative; height: 100%;
     //border: 1px #F00 solid;
+
       .biglogo{
-        border: 1px #F00 solid;
+        //border: 1px #F00 solid;
         width: 320px; height: 320px;
-        background-image: url(@biglogo);
-        position: absolute; top:30%; left:60%;
+        background-image: url(@big_logo);
+        position: absolute; top:40%; left:60%;
         transition: 1s;
+
         &:hover{
           transform:scale(1.3);
           opacity: 0;
@@ -107,6 +119,7 @@ footer{
     top: 5px;
     left: 7%;
   }
+
   .sns_icon{
     float:right;
     position: relative; top: 10px; right: 3px;
