--- a/ho-ginza/style.css
+++ b/ho-ginza/style.css
@@ -21,6 +21,19 @@ a{text-decoration: none;}
   background-color: #b2b2b2;
 }
 
+.line{
+  height: 2px;
+  background-color: #cfbe72;
+}
+
+.fix{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 /* intro ********************************************************************/
   .intro{
     width: 100%; height: 100%;
@@ -52,8 +65,6 @@ a{text-decoration: none;}
   }
   .intro .line{
     width: 100%;
-    height: 2px;
-    background-color: #cfbe72;
     position: absolute;
     bottom: 16px;
     left: 0;
@@ -121,13 +132,7 @@ a{text-decoration: none;}
     height: 58px;
     margin: 0 auto;
     padding: 21px 0;
-  }
-  .fix{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+            margin-bottom: 60px;
   }
   .lnb .l{
     height: 40px;
@@ -162,24 +167,24 @@ a{text-decoration: none;}
 
 
 /*notice *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  */
-  .notice{
+  #notice{
     width: 1000px; height: 72px;
     margin: 0 auto 122px;
   }
-  .notice>img{
+  #notice>img{
     margin-left: 55px;
     float: left;
   }
-  .notice dl{
+  #notice dl{
     margin-left: 24px;
     float: left;
     /*display: inline;*/
   }
-  .notice dt{
+  #notice dt{
     font-size: 14px;
     margin-bottom: 14px;
   }
-  .notice dd{
+  #notice dd{
     font-size: 11px;
         line-height: 1.7em;
   }
@@ -187,15 +192,13 @@ a{text-decoration: none;}
 
 
 /*about *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  */
-  .about{
+  #about{
     width: 100%; height: 560px;
     margin-bottom: 120px;
     background: url("img/navy_bg.png") repeat;
     /*background-size: 220px 220px;*/
   }
-  .line{
-    height: 2px;
-    background-color: #cfbe72;
+  #about .line{
     margin-top: 75px;
   }
   #about_txt{
@@ -218,7 +221,7 @@ a{text-decoration: none;}
   }
 
 /*menu *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  */
-  .menu{
+  #menu{
     height: 648px;
   }
   #menu_img{
@@ -245,6 +248,13 @@ a{text-decoration: none;}
   }
   #menu_list p{
     margin-top: 10px;
+    /*width: 992px;
+    margin: 0 auto;*/
+    font-family: "游明朝体", "Yu Mincho", YuMincho, serif;
+    color: #727272;
+    font-size: 12px;
+    /*text-align: left;
+    margin-bottom: 122px;*/
   }
 
 /*  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  */
@@ -253,43 +263,79 @@ a{text-decoration: none;}
     height: 74px;
   }
 
-
-
-
 /*access *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  */
   #access{
     height: 438px;
     background-color: #FFB005;
+    margin-bottom: 120px;
   }
   #access_txt{
     width: 38.046875%;
     font-size: 12px;
     line-height: 1.8em;
+    float: left;
   }
-  #access_tit{
+  #access_txt h2{
     /*float: left;*/
-    position: relative;
-    left: 50%;
-    /*margin-left: 50%;*/
-  }
-  #access_tit ul li{
     /*position: relative;
-    left: 70%;*/
+    left: 50%;*/
     margin-left: 60%;
+  }
+
+  #access_txt ul{
+    margin-top: 104px;
+    margin-left: 28%;
   }
 
   /* map */
   #map_area{
-    /*z-index: 3;*/
-    float: left;
+    overflow: hidden;
     height: 438px;
-    margin-left: 39%;
-    /*width: 100%;*/
-    /*padding: 0px;
-    border-width: 0px;
-    margin: 0px;*/
-    background-color: #F00;
   }
+  #map_area img{height: 438px;}
+
+/*tel *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  */
+  #tel{
+    background: url("img/navy_bg.png");
+    height: 462px;
+    text-align: center;
+  }
+  #tel img{
+    margin: 75px auto 0;
+  }
+  #tel .line{
+    margin-top: 55px;
+  }
+
+/*footer *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  */
+  #footer{
+    background: url("img/footer_bg.png");
+    height: 330px;
+  }
+
+  #footer_txt{
+    width: 1000px;
+    margin: 0 auto;
+    padding-top: 100px;
+    font-family: "游明朝体", "Yu Mincho", YuMincho, serif;
+  }
+  #footer_txt h2{
+    font-size: 14px;
+    margin-bottom: 20px;
+  }
+  .address{
+    font-size: 12px;
+    line-height: 2.5em;
+    border-left: 1px solid #cccccc;
+    padding-left: 27px;
+    display: inline-block;
+  }
+  .copy{
+    font-size: 11px;
+    padding-top: 67px;
+    float: right;
+  }
+
 
 
 /***************************************************************************/
