--- a/dean/style.css
+++ b/dean/style.css
@@ -243,18 +243,34 @@ a{text-decoration: none;}
     font-size: 30px;
   }
   .icon_box{
-    width: 96px; height: 45px;
+    width: 96px; height: 60px;
     text-align: center;
-    padding-top: 15px;
   }
   #instagram_box{
-    height: 172px;
+    width: 58%; height: 172px;
     float: left;
   }
   #twitter_box{
     /*padding-left: 0.9375em;
-    padding-right: 0.9375em;*/
+    padding-right: 0.9375em;
     float: right;
-    width: 495px; height: 172px;
+    width: 495px;*/
+    height: 172px;
+    margin-left: 58%;
     padding: 0 15px;
+    text-align: center;
   }
+  .twitter_txt{
+    margin-top: 30px;
+  }
+
+  /* instagram */
+  #instagram{
+    padding : 100px 0;
+    text-align: center;
+  }
+  #instagram img{
+    /*margin: 0 atuo;*/
+  }
+  
+/******************************************************************************/
