--- a/dean/style.css
+++ b/dean/style.css
@@ -1,6 +1,6 @@
 *{
   margin: 0; padding: 0;
-  outline: 1px yellow solid;
+  outline: 1px purple solid;
 }
 body{color: #FFF;}
 ul{list-style:none;}
@@ -266,11 +266,11 @@ a{text-decoration: none;}
 
   /* instagram */
   #instagram{
-    padding : 100px 0;
+    margin-top : 100px;
     text-align: center;
   }
   #instagram img{
     /*margin: 0 atuo;*/
   }
-  
+
 /******************************************************************************/
