--- a/dean/css/style.css
+++ b/dean/css/style.css
@@ -1,89 +1,11 @@
-*{
-  margin: 0; padding: 0;
-  outline: 1px purple solid;
-}
-body{color: #FFF;}
-ul{list-style:none;}
-a{text-decoration: none;}
-.yel{color: #fcbe46;}
-.fix{
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-.btn{
-  background: #fcbe46;
-  /*height: 38px;*/
-  font-size: 10px;
-  width: 76px;
-  padding: 13px 30px;
-}
-.play_btn{
-  background-color: #303030;
-  color: #FFF;
-}
-.download_btn{
-  background-color: #fcbe46;
-  color: #FFF;
-}
-h1{
-  text-transform: uppercase;
-  font-weight: 400;
-  font-size: 64px;
-  line-height: 72px;
-  font-family: 'Megrim';
-}
-/******************************************************************************/
-
-  #container{
-    background-color: #000;
-  }
 
   /* header */
   header{
-    background: url("img/album_1901x950.jpg");
+    background: url("../img/album_1901x950.jpg");
     background-position: center top;
     width: 100%;
     height: 950px;
   }
-
-/******************************************************************************/
-
-  /* gnb */
-  .gnb_wrap{
-    height: 95px;
-    background-color: #000;
-    /*padding-top: 20px;*/
-    font-family: 'Comfortaa';
-    font-size: 13px;
-  }
-  #gnb{
-    /*width: 65%;*/
-    width: 1280px;
-    margin: 0 auto;
-  }
-  #gnb img{
-    float: left;
-    margin-top: 20px;
-    margin-left: 15px;
-  }
-  #gnb ul{
-    float: right;
-    height: 60px;
-    text-transform: capitalize;
-    padding-right: 15px;
-    line-height: 95px;
-  }
-  #gnb li{
-    float: left;
-    margin-right: 40px;
-  }
-  #gnb li:nth-child(3){
-    text-transform: uppercase;
-  }
-  #gnb li:last-child{margin-right: 0;}
 
 /******************************************************************************/
 
@@ -219,21 +141,23 @@ h1{
   .news_box p{
     font-size: 12px;
     line-height: 20px;
-    margin-bottom: 0.65rem;
+    /*margin-bottom: 0.65rem;*/
   }
 
   .news_box ul{
-    margin-top: 10px;
-    width: 400px; height: 25px;
-    margin: 0 auto;
-    text-align: center;
+    width: calc(100% - 166px);
+    height: 25px;
+    margin: 10px auto 0;
   }
   .news_box li{
     float: left;
+    margin-right: 10px;
+  }
+  .news_box li:last-child{
+    margin-right: 0;
   }
   .news_box a{
     border-radius: 4px;
-    margin-right: 10px;
     padding: 0 15px;
     font-size: 12px;
     line-height: 25px;
@@ -287,11 +211,11 @@ h1{
 /******************************************************************************/
 
   /* upcoming show */
-  #upcomingshow{
+  #upcomingshows{
     padding-top: 100px;
     text-align: center;
   }
-  #upcomingshow h1{
+  #upcomingshows h1{
     margin-bottom: 40px;
   }
   .show_wrap{
@@ -319,6 +243,17 @@ h1{
     margin: 0 auto;
     text-align: center;
     overflow: hidden;
+  }
+  .news_ dt:first-of-type{
+    width: 400px;
+    height: 400px;
+  }
+  .news_ dd:nth-child(2){
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    margin-top: 10px;
+    margin-bottom: 20px;
   }
 
 /******************************************************************************/
