--- a/dean/css/style.css
+++ b/dean/css/style.css
@@ -173,26 +173,59 @@
   #sns i{
     font-size: 30px;
   }
+  /* sns_header */
   .sns_header{
     margin-bottom: 250px;
   }
   .icon_box{
     width: 96px; height: 60px;
     text-align: center;
+    float: left;
+    margin-right: 15px;
   }
+
+  /* instagram_box */
   #instagram_box{
     width: 58%; height: 172px;
     float: left;
   }
+  #instagram_box p{
+    font-size: 14px;
+    font-weight: 400;
+    margin-bottom: 0.65rem;
+    display: inline;
+  }
+
+  /* twitter_box */
   #twitter_box{
     height: 172px;
     margin-left: 58%;
     padding: 0 15px;
     text-align: center;
   }
-  #twitter_txt{
+  #twitter_box aside{
     margin-top: 30px;
+    text-align: left;
+    font-size: 13px;
+    line-height: 18px;
+    color: #FFF;
   }
+  #twitter_box a{
+    color: #fcbe46;
+  }
+  .twitter_txt{
+    width: 495px;
+    height: 36px;
+    /*overflow: visible;*/
+    overflow: hidden;
+  }
+  #twitter_box aside a:last-child{
+    margin-top: 10px;
+    display: block;
+    font-weight: 600;
+    font-size: 12px;
+  }
+
 
   /* instagram */
   #instagram{
