--- a/dean/css/style.css
+++ b/dean/css/style.css
@@ -26,6 +26,10 @@
     font-family: Montserrat;
     padding-top: 250px;
   }
+  #purchase li:hover,#purchase li:hover a{
+    color: #FFF;
+    cursor: pointer;
+  }
   #purchase p{
     margin-bottom: 20px;
   }
@@ -143,9 +147,11 @@
     line-height: 20px;
     /*margin-bottom: 0.65rem;*/
   }
-
-  .news_box ul{
+  .news_box .download{
     width: calc(100% - 166px);
+  }
+  .news_box ul{
+    width: calc(100% - 260px);
     height: 25px;
     margin: 10px auto 0;
   }
@@ -162,6 +168,32 @@
     font-size: 12px;
     line-height: 25px;
     display: inline-block;
+  }
+
+  /* button hover */
+  .btn_hover{
+    background-color: #303030;
+    color: #FFF;
+  }
+  .btn_hover:hover {
+  	background-color: #535353;
+  	color: #FFF;
+  }
+
+  .download_hover {
+	  background-color: #fcbe46;
+    color: #FFF;
+  }
+  .download_hover:hover {
+  	background-color: #2f79c2;
+    color: #FFF;
+  }
+  .btn_hover:hover,.download_hover:hover{
+    -webkit-transition: all 500ms ease-out;
+  	-moz-transition: all 500ms ease-out;
+  	-ms-transition: all 500ms ease-out;
+  	-o-transition: all 500ms ease-out;
+  	transition: all 500ms ease-out;
   }
 
 /******************************************************************************/
@@ -263,6 +295,9 @@
     line-height: 44px;
     font-weight: 600;
     font-size: 14px;
+    cursor: pointer;
+    margin-bottom: 6px;
+    border-bottom: 1px solid rgba(228, 228, 228, 0.2);
   }
   .show_desc{
     display: none;
