--- a/sandellsandberg/css/style.css
+++ b/sandellsandberg/css/style.css
@@ -1,19 +1,30 @@
-/* http://www.sandellsandberg.se/ */
 *{
   margin: 0; padding: 0;
   list-style: none;
   text-decoration: none;
-}
-body{
   outline: 1px #FF3369 solid;
 }
-
-/*header*/
+body{
+  color: #565656;
+}
+.row {
+    width: 1200px;
+    max-width: 100%;
+    min-width: 768px;
+    margin: 0 auto;
+    position: relative;
+}
+h1{
+  font-size: 45px;
+  font-family: "SaBo";
+  line-height: 50px;
+  color: #000;
+}
+a{color: #000;}
+  /*gnb*/
   .gnb{
-    width: 100%;
     background-color: #fced23;
     padding: 20px;
-    /*float: left;*/
   }
   .logo{
     margin-top: 10px;
@@ -21,34 +32,123 @@ body{
     height: 63px;
   }
 
-/*gnb*/
-  .menu{
-    /*padding-right: 68px;*/
-    float: left;
+  /*gnb_list*/
+  .gnb ul{
+    float: right;
     width: 600px;
-    /*margin-right: 68px;*/
-    margin-left: 1200px;
-    text-transform: capitalize;
-    color: #000;
     font-size: 18px;
     font-weight: bold;
   }
-  .menu li{
+  .gnb li{
     float: left;
     height: 86px;
     line-height: 86px;
     margin-left: 20px;
+
+    font-size: 18px;
+    font-style: normal;
+    font-family: "SaBo";
+    font-weight: 400;
+    overflow: hidden;
   }
 
 
-/*content*/
-  .content{
-    width: 100%; height: 600px;
-    /*background-color: rgba(0, 0, 0, 0);*/
-    background-repeat: no-repeat;
-    background-image: url(image/content_1.jpg);
-    background-size: cover;
-    background-position: center center;
+  /*ebanner*/
+  .fadebanner{
     width: 100%;
-    height: 100%;
+    /*height: 600px;*/
+    position: relative;
+  }
+  .fadebanner ul{
+    width: 100%;
+    height: 600px;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    font-size:0
+  }
+  .fadebanner li{
+    display: inline-block;
+  }
+  .fadebanner li img{
+    position: absolute;
+    left: 0;
+    top: 0;
+    /*display: none;*/
+  }
+  .fadebanner li a{
+    font-size: 0;
+    width: 12px;
+    height: 12px;
+    background-color: #FFF;
+    border-radius: 50%;
+    position: relative;
+    cursor: pointer;
+    top: 550px;
+    z-index: 1;
+    display: block;
+    margin: 0 2px 0 1px;
+  }
+  /*.fadebanner li.on a{background: rgba(252,237,35,0.9);}*/
+  .fadebanner button{position: absolute; top: 0; cursor: pointer}
+  .fadebanner button.next{right: 0; top: 50%;}
+  .fadebanner button.prev{left: 0; top: 50%;}
+
+
+  /*Om oss*/
+  #om{
+    padding-left: 10px;
+    margin-bottom: 60px;
+  }
+  .om_txt{
+    margin-top: 40px;
+    width: 75%;
+  }
+  .om_txt h1{
+    line-height: 50px;
+  }
+  .om_txt h1, .om_txt p{
+    margin-bottom: 14px;
+  }
+  .om_txt+a>i{
+    margin-left: 14px;
+  }
+
+
+  #aktuellt{
+    background-color: #000;
+    padding-top: 30px;
+    padding-bottom: 60px;
+    height: 710px;
+  }
+  .aktuellt_wrap{
+    color: #FFF;
+  }
+  .aktuellt_wrap h1{
+    padding-bottom: 30px;
+  }
+  .aktuellt_wrap ul{
+    width: 390px;
+    margin-right: 5px;
+    height: 584px;
+    overflow: hidden;
+    float: left;
+  }
+  .aktuellt_wrap li{
+    float: left;
+  }
+  .aktuellt_wrap li img{
+    width: 100%;
+  }
+  .more{
+    text-align: center;
+    font-family: sabo;
+    font-size: 18px;
+  }
+
+  #projekt{
+    margin-top: 60px;
+  }
+  #projekt h1{
+    padding-bottom: 30px;
   }
