--- a/sandellsandberg/css/style.css
+++ b/sandellsandberg/css/style.css
@@ -21,6 +21,8 @@ h1{
   color: #000;
 }
 a{color: #000;}
+
+
   /*gnb*/
   .gnb{
     background-color: #fced23;
@@ -146,6 +148,8 @@ a{color: #000;}
     font-size: 18px;
   }
 
+
+  /*projekt*/
   #projekt{
     margin-top: 60px;
   }
